tests/baselines/reference/getJavaScriptSyntacticDiagnostics5.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics5.ts':
/tests/cases/fourslash/a.js(1,9): error TS8005: 'implements' clauses can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    class C implements D { }
            ~~~~~~~~~~~~
!!! error TS8005: 'implements' clauses can only be used in TypeScript files.